--- a/css/index.css
+++ b/css/index.css
@@ -158,7 +158,5 @@ height:100%;
 .jl_div1d img
 {width:100%;
 height:100%;
-}
-a:link {color: #FF0000}
-a:visited {color: #00FF00}
-a:hover {border-color:#F00;}
+}	
+.jl_div1c2_a a>dt:hover {border-color: #FF00FF}	    
