--- a/css/index.css
+++ b/css/index.css
@@ -312,7 +312,7 @@ position:relative;
 {
 width:70px;
 height:20px;
-border:1px solid #FBB81C;
+border:1px solid #FF4F4F;
 border-radius:20px;
 -moz-border-radius:20px; /* Old Firefox */
 line-height:20px;
@@ -360,7 +360,7 @@ border-left:5px solid #FF4F4F;
 {
 width:70px;
 height:20px;
-border:1px solid #FBB81C;
+border:1px solid #E450BC;
 border-radius:20px;
 -moz-border-radius:20px; /* Old Firefox */
 line-height:20px;
@@ -404,3 +404,46 @@ border-left:5px solid #E450BC;
 
 
 /*4F部分样式*/
+.jl_div1b_dt5f4
+{
+width:70px;
+height:20px;
+border:1px solid #82C020;
+border-radius:20px;
+-moz-border-radius:20px; /* Old Firefox */
+line-height:20px;
+float:right;
+text-align:center;
+background-color:#82C020;
+color:#FFF;
+}
+.jl_div1c1f2f4
+{
+width:198px;
+height:360px;
+border:1px solid #E3E7EA;
+border-top:5px solid #82C020;
+float:left;
+}
+.jl_div1c1f_2f2f4
+{width:100%;
+height:110px;
+}
+.jl_div1c1f_2f2f4 dt
+{
+width:80px;
+height:25px;
+line-height:25px;
+text-align:center;
+font-weight:600;
+font-family:"微软雅黑";
+font-size:12px;
+color:#535353;
+background-color:#F9FAFC;
+float:left;
+margin:5px 7px;
+overflow:hidden;
+box-shadow: 3px 5px 5px #E3E7EA;
+border-left:5px solid #82C020; 
+}
+.jl_div1c1f_2f2f4 a>dt:hover{color:#F60;}
