--- a/css/jcshgsy.css
+++ b/css/jcshgsy.css
@@ -3,11 +3,12 @@
 body{font-size:62.5%;font-family:Microsoft YaHei;}
 a{text-decoration:none;}
 ul{list-style-type:none;}
-*{margin:0;padding:0;}
+*{margin:0;padding:0;border:0;}
+
 
 .lb_daos01{
 width:100%;
-height:40px;
+min-height:10px;
 background-image:url("../images/jcd1_01.gif");
 background-repeat:repeat-x;
 }
@@ -204,7 +205,8 @@ width:558px;
 .xiadao_02{
 width:auto;
 height:30px;
-border:ipx solid #8DB9F4;
+float:left;
+border:1px solid #8DB9F4;
 background-color:#FFFFFF;
 margin:8px 0px 8px 10px;
 border-radius:4px;
@@ -226,7 +228,7 @@ color:#FF7426;
 width:10px;
 height:30px;
 float:left;
-margin-right:10px;
+padding-right:10px;
 }
 .xiadao_05{
 width:150px;
@@ -313,8 +315,11 @@ height:92px;
 float:left;
 }
 
-
-
+/*******************/
+.lb_qt{
+width:100%;
+min-height:10px;
+}
 
 
 
