--- a/css/2_cloth.css
+++ b/css/2_cloth.css
@@ -177,7 +177,7 @@ border:1px solid transparent;
 .jl_fudiv2
 {width:1160px;
 height:95px;
-margin-top:20px;
+margin-top:10px;
 }
 .jl_fudiv2 img
 {
@@ -196,7 +196,7 @@ border-top:1px solid #F0F0F0;
 {
 width:1160px;
 height:710px;
-margin:10px auto 0 auto;
+margin:0px auto 0 auto;
 border:1px solid transparent;
 
 }
@@ -242,7 +242,7 @@ height:100%;
 {
 width:1160px;
 height:810px;
-margin:10px auto 0 auto;
+margin:0px auto 0 auto;
 border:1px solid transparent;
 
 }
@@ -250,14 +250,14 @@ border:1px solid transparent;
 .jl2_divfu1fffh
 {
 width:1160px;
-height:720px;
+height:710px;
 margin:10px auto 0 auto;
 border:1px solid transparent;
 
 }
 .jl2_divfu1_2ffh
 {width:1160px;
-height:660px;
+height:640px;
 }
 .jl_divhu1
 {width:230px;
@@ -300,6 +300,7 @@ height:100%;
 {width:228px;
 height:200px;
 border:1px solid #CCC;
+float:left;
 }
 .jl_divhu1c1
 {width:100%;
@@ -327,6 +328,7 @@ margin-right:10px;
 width:468px;
 height:200px;
 border:1px solid #CCC;
+float:left;
 }
 .jl_divhu2a img
 {width:100%;
@@ -372,3 +374,112 @@ height:100%;
 height:100%;
 }
 .jl_divhu1c2:hover{color:#F30;}
+
+
+/*箱包*/
+.jl2_divfu1fffhx
+{
+width:1160px;
+height:810px;
+margin:0px auto 0 auto;
+border:1px solid transparent;
+}
+/*珠宝*/
+.jl2_divfu1fffhxz
+{
+width:1160px;
+height:700px;
+margin:10px auto 0 auto;
+border:1px solid transparent;
+}
+.jl_divzhubao1
+{width:100%;
+height:200px;
+margin-top:10px;
+}
+.jl_divhu1czhubao1 img
+{width:100%;
+height:100%;
+}
+.jl_divhu1czhubao
+{width:220px;
+height:200px;
+border:1px solid #CCC;
+float:left;
+margin-left:8px;
+}
+.jl_divhu1czhubao img
+{width:100%;
+height:100%;
+}
+.jl_divhu1czhubao1
+{width:220px;
+height:200px;
+border:1px solid #CCC;
+float:left;
+margin-right:8px;
+position:relative;
+}
+/*睡衣童装*/
+.jl2_divfu1fffhxzt
+{
+width:1160px;
+height:600px;
+margin:10px auto 0 auto;
+border:1px solid transparent;
+}
+.jl_divzui1
+{width:575px;
+height:500px;
+float:left;
+margin-right:10px;
+}
+
+.jl_divzui1ftn
+{width:575px;
+height:490px;
+float:right;
+}
+.jl_divzui1a
+{width:575px;
+height:500px;
+float:left;
+}
+.jl_divzui1a
+{width:180px;
+height:432px;
+float:left;
+margin-right:9px;
+}
+.jl_divzui2
+{width:575px;
+height:490px;
+float:left;
+background-color:#060;
+}
+.jl2_divfu1_2ffhzui
+{
+width:100%;
+height:410px;
+}
+.jl2_divfu1_2ffhzuidt
+{width:178px;
+height:200px;
+border:1px solid #CCC;
+margin-top:15px;
+}
+.jl2_divfu1_2ffhzuidt img 
+{width:100%;
+height:100%;
+}
+.jl2_divfu1_2ffhzuidt1
+{
+width:178px;
+height:417px;
+border:1px solid #CCC;
+margin-top:15px;
+}
+.jl2_divfu1_2ffhzuidt1 img 
+{width:100%;
+height:100%;
+}
