--- a/css/jcshgsy.css
+++ b/css/jcshgsy.css
@@ -1,7 +1,6 @@
 @charset "utf-8";
 
-body{font-size:62.5%;font-family:Microsoft YaHei;}
-a{text-decoration:none;}
+body{font-family:Microsoft YaHei;}
 ul{list-style-type:none;}
 *{margin:0;padding:0;border:0;}
 
