--- a/css/2_food.css
+++ b/css/2_food.css
@@ -14,37 +14,118 @@ ul{ list-style:none;}
 	width:922px;
 	height:240px;
 	border:1px solid #E9E9E9;
-	margin:8px 0px 30px 236px;
+	margin:8px 0px 0px 236px;
 	}
 .lb_shipinga02{
 	width:904px;
 	height:222px;
 	margin:0px 0px 18px 18px;
-	background-color:#06C;
+	position:relative;
 	}
+/******	background-color:#06C;*******/
 .shipinga02a{
 	width:170px;
 	height:100%;
 	float:left;
 	}
-	
-	
-	
-	
-	
-	
-	
-	
-	
-	
-	
-	
-	
+.lb_shipinga02b{
+	width:660px;
+	height:222px;
+	float:left;
+	margin:auto 44px auto 30px;
+	}
+.lb_shipinga02b1{
+	width:1260px;
+	height:100%;
+	margin:0 auto;
+	overflow:hidden;
+	}	
+.lb_shipinga02b2{
+	width:660px;
+	height:222px;
+	}
+.lb_shipinga02b3{
+	width:28px;
+	height:40px;
+	cursor: pointer;
+	float:left;
+	line-height:222px;
+	margin:106px 30px 0px 0px;
+	}	
+.lb_shipinga02b4{
+	width:560px;
+	height:100%;
+	margin:0 auto;
+	float:left;
+	}	
+.lb_shipinga02b5{
+	width:183px;
+	height:222px;
+	float:left;
+	}	
+.lb_shipinga02b6{
+	width:28px;
+	height:40px;
+	cursor: pointer;
+	float:left;
+	line-height:222px;
+	margin:106px 0px 0px 0px;
+	}		
+.lb_shipinga02b7{
+	width:100%;
+	height:34px;
+	line-height:34px;
+	text-align:center;
+	font-size:1.2em;
+	color:#666666;
+	}
+.lb_shipinga02b8{
+	height:20px;
+	margin:0px 14px;
+	}	
+.lb_shipinga02b9{
+	font-size:1em;
+	line-height:22px;
+	text-align:center;
+	font-weight:bold;
+	word-wrap:break-word;
+	color:#666666;
+	}	
+.lb_shipinga02b10{
+	width:140px;
+	height:140px;
+	margin:0 auto 10px auto;
+	}	
+.lb_shipinga02b11{
+	text-align:center;
+	font-size:1.2em;
+	color:#D9D9D9;
+	margin:0px 14px;
+	color:#666666;
+	}
+.lb_shipingqgd{
+	width:80px;
+	height:24px;
+	background-color:#FD852E;
+	font-size:1.2em;
+	color:#FFFFFF;
+	line-height:24px;
+	padding-left:20px;
+	float:right;
+	position:absolute;
+	top:20px;
+	right:0px;
+	z-index:99;
+	border-bottom-left-radius:60px;
+	-moz-border-bottom-left-radius:60px; /* 老的 Firefox */
+	border-top-left-radius:60px;
+	-moz-border-top-left-radius:60px; /* 老的 Firefox */
+	}	
 	
 .lb_shipingb01{
 	width:1160px;
 	height:38px;
-	margin-bottom:6px;
+	margin-top:30px;
 	}
 .lb_shipingb02{
 	font-size:2em;
@@ -371,8 +452,6 @@ ul{ list-style:none;}
 	color:#FB3659;
 	padding-left:20px;
 	}
-
-
 
 
 
