--- a/css/2_tuij.css
+++ b/css/2_tuij.css
@@ -1,19 +1,268 @@
 @charset "utf-8";
 body{font-size:62.5%;font-family:Microsoft YaHei;}]
 ul{ list-style:none;}
-.tuij{
+.lb_tuij{
 	width:100%;
 	min-height:10px;
 	}
+.lb_tuija{
+	width:1160px;
+	min-height:10px;
+	margin:0 auto;
+	}
+.lb_tuijb{
+	width:100%;
+	height:50px;
+	}
+.lb_tuijb1{
+	width:100%;
+	height:30px;
 
+	margin-top:18px;
+	}
+.lb_tuijb1a{
+	font-size:2em;
+	font-weight:bold;
+	color:#FF6600;
+	float:left;
+	line-height:30px;
+	}
+.lb_tuijb1b{
+	font-size:1.4em;
+	color:#999999;
+	padding-left:18px;
+	float:left;
+	line-height:30px;
+	}
+.lb_tuijb2{
+	font-size:1.4em;
+	color:#999999;
+	margin-right:16px;
+	float:right;
+	line-height:30px;
+	}
+.lb_tuijb3{
+	width:100%;
+	height:8px;
+	}
+.lb_tuijc{
+	width:100%;
+	height:224px;
+	margin-bottom:40px;
+	}
+.lb_tuijc1a{
+	width:280px;
+	height:224px;
+	background-image:url("../images/tuij3_03.jpg");
+	background-size:100% 100%;
+	background-repeat:no-repeat;
+	}
+.lb_tuijc1b{
+	width:280px;
+	height:224px;
+	margin-left:10px;
+	background-image:url("../images/tuij3_05.jpg");
+	background-size:100% 100%;
+	background-repeat:no-repeat;
+	}
+.lb_tuijc1c{
+	width:280px;
+	height:224px;
+	margin-left:10px;
+	background-image:url("../images/tuij3_07.jpg");
+	background-size:100% 100%;
+	background-repeat:no-repeat;
+	}
+.lb_tuijc1d{
+	width:280px;
+	height:224px;
+	margin-left:10px;
+	background-image:url("../images/tuij3_09.gif");
+	background-size:100% 100%;
+	background-repeat:no-repeat;
+	}
+.lb_tuijc2{
+	padding:20px 0px 0px 20px;
+	}	
+.lb_tuijc3{
+	font-size:2.4em;
+	font-weight:bold;
+	color:#FFFFFF;
+	word-wrap:break-word;
+	}	
+.lb_tuijc4{
+	font-size:1.4em;
+	color:#FFFFFF;
+	word-wrap:break-word;
+	}	
+.lb_tuijd{
+	width:100%;
+	height:460px;
+	}	
+.lb_tuijd1{
+	width:370px;
+	height:460px;
+	float:left;
+	border-left:1px solid #DCDCDC;
+	}	
+.lb_tuijd2{
+	width:100%;
+	height:50%;
+	}	
+.lb_tuijd3{
+	width:183px;
+	height:229px;
+	position:relative;
+	border-top:1px solid #DCDCDC;
+	border-right:1px solid #DCDCDC;
+	border-bottom:1px solid #DCDCDC;
+	}	
+.lb_tuijd4{
+	width:100%;
+	height:150px;
+	}	
+.lb_tuijd5{
+	font-size:1.4em;
+	color:#666666;
+	padding-left:10px;
+	word-wrap:break-word;
+	}	
+.lb_tuijd6{
+	font-size:1.2em;
+	color:#FC761D;
+	padding-left:10px;
+	word-wrap:break-word;
+	}	
+.lb_tuijd7{
+	font-size:1.6em;
+	color:#FC761D;
+	padding-left:10px;
+	word-wrap:break-word;
+	}
+.lb_tuijd7 s{
+	font-size:1em;
+	color:#888888;
+	word-wrap:break-word;
+	}	
+.lb_tuijd8{
+	width:370px;
+	height:460px;
+	margin:0px 23px;
+	float:left;
+	border:1px solid #DCDCDC;
+	background-image:url("../images/tuij1_10.gif");
+	background-size:100% 100%;
+	background-repeat:no-repeat;
+	}	
+.lb_tuije{
+	width:100%;
+	height:100px;
+	margin:20px 0px;
+	}
+/********************/
+.lb_tuijf{
+	width:100%;
+	height:460px;
+	border-left:1px solid #DCDCDC;
+	}	
+.lb_tuijf1{
+	width:100%;
+	height:229px;
+	}	
+.lb_tuijf2{
+	width:192px;
+	height:229px;
+	float:left;
+	position:relative;
+	border-top:1px solid #DCDCDC;
+	border-right:1px solid #DCDCDC;
+	}	
+.lb_tuijf3{
+	width:100%;
+	height:130px;
+	}	
+.lb_tuijf4{
+	width:100%;
+	height:30px;
+	background-color:#FF9800;
+	font-size:1.4em;
+	color:#FFFFFF;
+	text-align:center;
+	line-height:30px;
+	margin-top:2px;
+	}	
+.lb_tuijf5{
+	width:50px;
+	height:50px;
+	position:absolute;
+	top:-1px;
+	right:0px;
+	}	
+.lb_tuijf6{
+	width:370px;
+	height:460px;
+	margin:0px 23px;
+	float:left;
+	border:1px solid #DCDCDC;
+	background-image:url("../images/tuij007_03.gif");
+	background-size:100% 100%;
+	background-repeat:no-repeat;
+	}
+.lb_tuijf7{
+	width:30px;
+	height:14px;
+	background-color:#7DC473;
+	font-size:1em;
+	line-height:14px;
+	text-align:center;
+	color:#FFFFFF;
+	border-radius:6px;
+	-moz-border-radius:6px; /* ÀÏµÄ Firefox */
+	position:absolute;
+	top:8px;
+	left:8px;
+	}	
+.lb_tuijh{
+	width:100%;
+	height:120px;
+	}	
+.lb_tuijh1{
+	width:276px;
+	height:100%;
+	background-color:#FF695E;
+	}	
+.lb_tuijh2{
 
-
-
-
-
-
-
-
+	}	
+	/**********	padding:16px 0px 0px 20px;***********/
+.lb_tuijh3{
+	font-size:8em;
+	font-style:italic;
+	color:#FFFFFF;
+	padding-right:10px;
+	}	
+.lb_tuijh4{
+	font-size:1.8em;
+	font-style:italic;
+	color:#FFFFFF;
+	font-weight:bold;
+	}	
+.lb_tuijh5{
+	font-size:1.4em;
+	color:red;
+	}	
+	
+	
+	
+	
+	
+	
+	
+	
+	
+	
+	
+	
 
 
 
